--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
 
             <div class="home__data">
               <h1 class="home__title">Hi, I am Sourav</h1>
-              <h3 class="home__subtitle">Future Web Developer</h3>
+              <h3 class="home__subtitle">Web Developer</h3>
               <p class="home__description">
-              As a BCA student, I am passionate about designing and developing intuitive, user-friendly interfaces that enhance the user experience. 
+              I'm deeply passionate about crafting intuitive, user-friendly interfaces that not only look great but also elevate the overall user experience. 🚀 
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me<i class="uil uil-message button__icon"></i>
@@ -238,7 +238,7 @@
 
         <div class="about__data">
           <p class="about__description">
-            As an ongoing BCA student, I am passionate about designing and developing intuitive, user-friendly interfaces that enhance the user experience. I have a strong foundation in web technologies such as HTML, CSS, JavaScript, and React, and I am continuously learning and expanding my skill set.
+           Hey there! I'm Sourav Hati, an 18-year-old BCA student and passionate web developer. I specialize in designing and building intuitive, user-friendly interfaces using HTML, CSS, JavaScript, and React. I'm also expanding my expertise in Python, Java, C, and C++, constantly pushing my skills to create seamless digital experiences. Always eager to learn and innovate!
           </p>
           <div class="about__info">
             <div>
