--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                   <image
                     class="home__blob-img"
                     x="-20"
-                    xlink:href="assets/img/HD DP.png"
+                    xlink:href="assets/img/front.png"
                   ></image>
                 </g>
               </svg>
