--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <div class="about__buttons">
             <a
               download=""
-              href="assets/pdf/Sourav_Hati_Resume.pdf""
+              href="assets/pdf/Sourav_Hati_Resume.pdf"
               class="button button--flex"
             >
               Download Resume<i class="uil uil-download-alt button__icon"></i
