--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                   <image
                     class="home__blob-img"
                     x="-20"
-                    xlink:href="assets/img/front.png"
+                    xlink:href="assets/img/front1.png"
                   ></image>
                 </g>
               </svg>
@@ -269,7 +269,7 @@
           <div class="about__buttons">
             <a
               download=""
-              href="assets/pdf/Sourav_Hati_Resume.pdf"
+              href="assets/pdf/Sourav_Hati_Resume.pdf""
               class="button button--flex"
             >
               Download Resume<i class="uil uil-download-alt button__icon"></i
