--- a/index.html
+++ b/index.html
@@ -267,9 +267,7 @@
           </div>
 
           <div class="about__buttons">
-            <a
-              download=""
-              href="assets/pdf/Sourav Av.pdf""
+            <a download="" href="assets/pdf/souravav.pdf""
               class="button button--flex"
             >
               Download Resume<i class="uil uil-download-alt button__icon"></i
