--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <h1 class="home__title">Hi, I am Sourav</h1>
               <h3 class="home__subtitle">Web Developer</h3>
               <p class="home__description">
-              I'm deeply passionate about crafting intuitive, user-friendly interfaces that not only look great but also elevate the overall user experience. 🚀 
+              I'm passionate about crafting intuitive, user-centric interfaces 🎨 that not only look great but also enhance the overall user experience 🚀 
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me<i class="uil uil-message button__icon"></i>
@@ -238,7 +238,15 @@
 
         <div class="about__data">
           <p class="about__description">
-           Hey there! I'm Sourav Hati, an 18-year-old BCA student and passionate web developer. I specialize in designing and building intuitive, user-friendly interfaces using HTML, CSS, JavaScript, and React. I'm also expanding my expertise in Python, Java, C, and C++, constantly pushing my skills to create seamless digital experiences. Always eager to learn and innovate!
+           Hey there! 👋 I'm Sourav Hati, a second-year BCA student, aspiring Web Developer, and UI/UX enthusiast based in India. I’m currently on a journey to build beautiful, responsive, and user-friendly websites while constantly learning and leveling up my skills. 💻🌱
+
+I’m passionate about turning ideas into clean, functional designs that not only look great 🎨 but also deliver a smooth and engaging user experience 🚀. Whether it's frontend development or UI/UX design, I love bringing digital experiences to life one line of code at a time.
+
+At just 1*-years-old, I’m still learning — and proud of it! I believe in continuous growth, staying curious, and building real-world projects to improve every day.
+
+When I’m not coding or studying, you'll usually find me exploring new tech, sketching out design ideas, or working on side projects that challenge me creatively and technically.
+
+Let’s connect and create something amazing! 🙌
           </p>
           <div class="about__info">
             <div>
@@ -408,7 +416,7 @@
                 <h3 class="qualification__title">Web Devloper</h3>
                 <span class="qualification__subtitle">Inovate</span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i>Ongoing
+                  <i class="uil uil-calendar-alt"></i>
                 </div>
               </div>
 
@@ -473,10 +481,10 @@
               <div>
                 <h3 class="qualification__title">BCA, Computer Science</h3>
                 <span class="qualification__subtitle">
-                  Rajdhani College (Utkal University)
+                  Rajdhani College Bhubaneswar (Utkal University)
                 </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2024-Ongoing
+                  <i class="uil uil-calendar-alt"></i> Ongoing
                 </div>
               </div>
 
@@ -494,8 +502,8 @@
                 <!-- <span class="qualification__line"></span> -->
               </div>
               <div>
-                <h3 class="qualification__title">HSC, Commerce</h3>
-                <span class="qualification__subtitle"> BJB Higher Secondary School</span>
+                <h3 class="qualification__title">12th, Commerce</h3>
+                <span class="qualification__subtitle"> BJB College Bhubaneswar</span>
                 <div class="qualification__calender">
                   <i class="uil uil-calendar-alt"></i> 2022-2024
                 </div>
