--- a/index.html
+++ b/index.html
@@ -238,15 +238,7 @@
 
         <div class="about__data">
           <p class="about__description">
-           Hey there! 👋 I'm Sourav Hati, a second-year BCA student, aspiring Web Developer, and UI/UX enthusiast based in India. I’m currently on a journey to build beautiful, responsive, and user-friendly websites while constantly learning and leveling up my skills. 💻🌱
-
-I’m passionate about turning ideas into clean, functional designs that not only look great 🎨 but also deliver a smooth and engaging user experience 🚀. Whether it's frontend development or UI/UX design, I love bringing digital experiences to life one line of code at a time.
-
-At just 1*-years-old, I’m still learning — and proud of it! I believe in continuous growth, staying curious, and building real-world projects to improve every day.
-
-When I’m not coding or studying, you'll usually find me exploring new tech, sketching out design ideas, or working on side projects that challenge me creatively and technically.
-
-Let’s connect and create something amazing! 🙌
+          Hey! 👋 I’m Sourav Hati, a second-year BCA student from India 🇮🇳 passionate about web development 💻 and UI/UX design 🎨. I love building clean, responsive websites that look great and work smoothly 🚀. Always learning and growing 🌱 whether it's writing better code, improving my designs, or working on fun side projects. When I’m not coding, you’ll find me sketching ideas ✏️ or exploring new tech 🔍. Let’s connect and build something awesome together! 🙌
           </p>
           <div class="about__info">
             <div>
@@ -416,7 +408,7 @@ Let’s connect and create something amazing! 🙌
                 <h3 class="qualification__title">Web Devloper</h3>
                 <span class="qualification__subtitle">Inovate</span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i>
+                  <i class="uil uil-calendar-alt"></i>2024-25
                 </div>
               </div>
 
@@ -437,7 +429,7 @@ Let’s connect and create something amazing! 🙌
                 <h3 class="qualification__title">Store Exicutive</h3>
                 <span class="qualification__subtitle"> Airtel </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i>2024-2025
+                  <i class="uil uil-calendar-alt"></i>2024-25
                 </div>
               </div>
             </div>
